--- a/cop-sys-backend/composer.json
+++ b/cop-sys-backend/composer.json
@@ -11,6 +11,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "setasign/fpdf": "^1.8",
+        "setasign/fpdi": "^2.6",
         "spatie/laravel-medialibrary": "^11.5"
     },
     "require-dev": {
